syntax = "proto2";

message NodeInfos {
  required uint32 battery_voltage = 1;
  required uint32 fw_version = 2;
  required uint32 packet_rolling_num = 3;
}

message DataN1 {
  required int32 indoor_wb_temperature = 1;
  required uint32 indoor_light = 2;
  required uint32 indoor_humidity = 3;
  required int32 indoor_db_temperature = 4;
}

message PayloadN1 {
  required NodeInfos int = 1;
  required DataN1 ext = 2;
}

message DataN2 {
  required uint32  bma_reset_counter = 1;
  required uint32  cow_shock_conunt = 2;
  required uint32  cow_temperature_min = 3;
  required uint32  cow_temperature_max = 4;
  required uint32  cow_temperature_ave = 5;
  repeated float   cow_features_set_0_fx = 6 [packed = true]; // zero or more values
  required uint32  behaviour_classes = 7;
}

message PayloadN2 {
  required NodeInfos int = 1;
  required DataN2 ext = 2;
}

message DataN3 {
  required uint32 drinking_water_volume_cumulated = 1;
  required int32  drinking_water_temperature = 2;
  required uint32 sprinkler_water_volume_cumulated = 3;
  required int32  sprinkler_water_temperature = 4;
}

message PayloadN3 {
  required NodeInfos int = 1;
  required DataN3 ext = 2;
}

message DataN4 {
  required uint32 litter_conductivity = 1;
  required int32  litter_temperature = 2;
  required float  litter_vwc = 3;
}

message PayloadN4 {
  required NodeInfos int = 1;
  required DataN4 ext = 2;
}

message DataN5 {
  required uint32  sound_level_min = 1;
  required uint32  sound_level_max = 2;
  required uint32  sound_level_avg = 3;
  required uint32  nh3_ppm = 4;
  required uint32  h2s_ppm = 5;
  required uint32  co2_ppm = 6;
  required uint32  ch4_ppm = 7;
}
  
message payloadN5 {
  required NodeInfos int = 1;
  required DataN5 ext = 2;
}

message DataN6 {
  required uint32 indoor_wind_speed_min = 1;
  required uint32 indoor_wind_speed_max = 2;
  required uint32 indoor_wind_speed = 3;
  required uint32 indoor_wind_direction= 4;
}

message PayloadN6 {
  required NodeInfos int = 1;
  required DataN6 ext = 2;
}

message DataN7 {
  required bool dry_contact = 1;
}

message PayloadN7 {
  required NodeInfos int = 1;
  required DataN7 ext = 2;
}

message DataN8 {
  required bool rele = 1;
}

message PayloadN8 {
  required NodeInfos int = 1;
  required DataN8 ext = 2;
}

enum Network {
  // still no definition for Network enum values
  GPRS = 0;
  UMTS = 1;
  LTE = 2;
}

message StatusGateway {
  required uint32  battery_voltage = 1;
  required uint32  battery_current = 2;
  required uint32  solar_voltage = 3;
  required uint32  solar_current = 4;
  required Network network_type = 5;
  required uint32  signal_strength = 6;
  required double  latitude = 7;
  required double  longitude = 8;
}

message DataN9 {
  required int32  case_temperature = 1;
  required uint32 case_humidity = 2;
  required int32  outdoor_temperature = 3;
  required uint32 outdoor_humidity = 4;
  required uint32 outdoor_wind_speed_min = 5;
  required uint32 outdoor_wind_speed_max = 6;
  required uint32 outdoor_wind_speed = 7;
  required uint32 outdoor_wind_direction = 8;
  required uint32 outdoor_rainfall = 9;
}
  
message PayloadN9 {
  required StatusGateway gwInfo= 1;
  required DataN9 ext = 2;
} 

message PayloadN10 {
  required double latitude = 1;
  required double longitude = 2;
  required int32  case_temperature = 3;
  required uint32 case_humidity = 4;
  repeated uint32 indoor_insects_count_packed = 5;
}